# modulector

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  DATA-LICENSES.md  DEPLOYING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose_dist.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt  schema.yml  sonar-project.properties
.github/workflows/: dev-env-wf.yml  pr-wf.yml  prod-env-wf.yml  prod-pr-wf.yml
ModulectorBackend/: asgi.py  settings.py  settings_ci.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
config/: requirements.txt
db/: 00-set-config.sh  99-clean-init.sh  Dockerfile  postgresql.conf
modulector/: 0035_auto_20230111_1944.py  admin.py  apps.py  cron.py  models.py  pagination.py  propuesta_de_optimizacion.py  pubmed_job.py  serializers.py  views.py
modulector/dataSourceProcessors/: miRDBProcessor.py
modulector/exceptions/: exceptions.py
modulector/files/: .Rhistory  README.md  drugs.xls  get_diseases_and_drugs_data.r  miraccs-adapted.xlsx  miraccs.csv  mirnaSourceExample.json  mirna_mature.txt  ref_seq_to_symbols.txt  ref_seq_translation.sql  skipped.txt  sourcePost.json  test3.txt  testFile.txt
modulector/jobs/: pubmed_job.py
modulector/mappers/: gene_mapper.py  mature_mirna_mapper.py  pubmed_mapper.py  ref_seq_mapper.py
modulector/migrations/: 0001_initial.py  0002_auto_20200811_0047.py  0002_oldrefseqmapping.py  0003_auto_20200815_0016.py  0003_genesymbolmapping.py  0004_auto_20200818_0209.py  0004_mirbaseidmirna.py  0005_auto_20200822_1213.py  0005_urltemplate.py  0006_auto_20200822_1218.py  0006_mirnadisease.py  0007_auto_20200909_0317.py  0007_mirnadrugs.py  0008_auto_20200912_1443.py  0008_mirnadrugs_expression_pattern.py  0009_mirnadrugs_support.py  0010_auto_20201022_0445.py  0011_auto_20201022_0448.py  0012_auto_20201022_0449.py  0013_auto_20201118_1934.py  0014_auto_20201118_2233.py  0015_auto_20210118_0037.py  0016_auto_20210118_0256.py  0017_auto_20210118_1117.py  0018_auto_20210118_1355.py  0019_mirna_mirna_sequence.py  0020_auto_20210130_0317.py  0021_delete_url_templates.py  0022_mirnaxgene_sources.py  0023_mirnaxgene_score_class.py  0024_auto_20210212_1417.py  0025_auto_20210212_1725.py  0026_auto_20210222_1813.py  0027_auto_20210309_1620.py  0028_genealiases.py  0029_subscription_subscriptionitem.py  0030_auto_20210324_0308.py  0031_auto_20210330_0044.py  0032_auto_20210331_0014.py  0033_auto_20210427_1157.py  (+11 more)
modulector/processors/: disease_processor.py  drugs_processor.py  gene_alias_processor.py  i2d_processor.py  miRDBProcessor.py  mirdb_processor.py  mirdip_processor.py  sequence_processor.py
modulector/services/: data_loading_service.py  (+5 more)
sdk/: LICENSE  README.md  __init__.py  pyproject.toml  services.py  utils.py
sdk/src/modulector_sdk/: __init__.py  mcp_server.py  services.py  utils.py
tools/: get_version.sh  run.sh  test_db_connection.py  use_settings.sh
(+19 files in other folders)
