[project]
dependencies = [
  "daphne==4.1.0",
  "django==4.2.11",
  "django-crontab==0.7.1",
  "django-filter==23.3",
  "django-generate-secret-key==1.0.2",
  "django-stubs==4.2.7",
  "djangorestframework==3.14.0",
  "drf-spectacular==0.28.0",
  "drf-spectacular-sidecar==2024.12.1",
  "fasta-reader==3.0.2",
  "mcp==1.27.2",
  "mypy==1.9.0",
  "pandas==2.1.2",
  "psycopg2-binary==2.9.9",
  "requests==2.31.0",
  "tqdm==4.66.1",
]
description = "Open platform for miRNA, gene, and methylation site information."
name = "modulector"
readme = "README.md"
requires-python = ">=3.10"
version = "2.5.0"

[dependency-groups]
dev = [
  "types-requests>=2.33.0.20260518",
]
